--- a/style.css
+++ b/style.css
@@ -193,7 +193,15 @@ body{
 		 font-size:14px;
 		 	font-family: 'Montserrat', sans-serif;
 		font-family: 'Outfit', sans-serif;
-	}		 
+	}	
+
+     	 .prices {
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		gap: 30px;
+		
+	}
 	.big_price{
 	color:hsl(158, 36%, 37%);
 		font-size:40px;
