--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body{
      	 .prices {
 		display: flex;
 		align-items: center;
-		justify-content: flex-start;
+		justify-content: center;
 		gap: 15px;
 		
 	}
