--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body{
 	.big_price{
 	color:hsl(158, 36%, 37%);
 		font-size:40px;
-		margin-right:15px;
+		font-family: 'Montserrat', sans-serif;
 		font-family: 'Fraunces', serif;
 		font-family: 'Outfit', sans-serif;
 		font-weight:700;
