--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ body{
 		color:hsl(158, 36%, 37%);
 		font-size:40px;
 		font-family: 'Fraunces', serif;
+		font-family: 'Montserrat', sans-serif;
+		font-family: 'Outfit', sans-serif;
 		font-weight:700;
 	}
 	
