--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ font-family: 'Montserrat', sans-serif;
      	 .prices {
 		display: flex;
 		align-items: center;
-		justify-content: center;
+		justify-content: flex-start;
 		gap: 10px;
 		
 	}
